Lista de tareas

--- a/Tarea_24102024/index.html
+++ b/Tarea_24102024/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 
+<input type="text" id="tareaInput" placeholder="Nueva tarea">
+<button id="agregarTareaBotton">Agregar tarea</button>
+<ul id="tareaLista"></ul>
 
     <script src="./script.js"></script>
 </body>
